# pycolors

./: LICENSE  MANIFEST.in  README.md  pyansicolor.py  pycolors.py  pycolours.py  pyproject.toml  requirements.txt  setup.py
pyansicolor/: __init__.py  main.py
pyansicolor/pyansicolor.egg-info/: PKG-INFO  SOURCES.txt
pyansicolor/pycolors.egg-info/: PKG-INFO
pyansicolor/pycolours.egg-info/: PKG-INFO  SOURCES.txt
pycolors/: __init__.py
pycolors/pycolors.egg-info/: SOURCES.txt
pycolours/: __init__.py
tests/: __init__.py  test_pyansicolor.py  test_pycolors.py
